--- a/svelte/package.json
+++ b/svelte/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.16",
+		"daisyui": "^4.4.4",
 		"postcss": "^8.4.31",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
