--- a/svelte/package.json
+++ b/svelte/package.json
@@ -25,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"@directus/sdk": "^13.0.2",
-		"@sveltejs/adapter-cloudflare": "^2.3.3"
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
+		"svelte-markdown": "^0.4.0"
 	}
 }
