--- a/svelte/package.json
+++ b/svelte/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@directus/sdk": "^13.0.2",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
+		"highlight.js": "^11.9.0",
 		"svelte-markdown": "^0.4.0"
 	}
 }
